--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TableTopTool MVP</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <style>
+      body {
+      font-family:
+        system-ui,
+        -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
+      }
+      #vtt-canvas {
+        display: block; /* Canvases are inline by default, block can behave better in some layouts */
+        width: 100%; /* Occupy full width of parent */
+        height: 100%; /* Occupy full height of parent */
+        box-sizing: border-box; /* Ensure padding and border don't add to overall dimensions */
+      }
+    </style>
+    <link href="/public/ui.css" rel="stylesheet" >
+    <noscript><link rel="stylesheet" href="./public/ui.css"></noscript>
+    <link rel="icon" href="/public/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="/public/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <link rel="shortcut icon" href="/public/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="TableTopTool" />
+    <link rel="manifest" href="./site.webmanifest" />
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body class="bg-gray-800 text-white flex flex-col h-screen">
